prow/cluster/eks/deck_private_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deck-private
  namespace: default
spec:
  selector:
    app: deck-private
  ports:
  - port: 80
    targetPort: 4180
  type: NodePort
